# vibe-climux

./: .gitignore  AGENTS.md  CHANGES  CLAUDE.local.md  CLAUDE.md  README.md  UX_IMPROVEMENTS.md  climux.py  pyproject.toml  streaming.py
.claude/: settings.local.json
.claude/commands/: ask.md
app/: __init__.py
notes/: plan.md
tests/: conftest.py  test_app.py  test_cli_hanging_issue.py  test_cli_signal_sync.py  test_cli_streaming_solution.py  test_cli_tail_debug.py  test_climux.py  test_edge_cases.py  test_helpers.py  test_high_volume_streaming.py  test_json_rpc_streaming.py  test_multi_process_streaming.py  test_server_lifecycle.py  test_short_lived_processes.py  test_simple_cli_streaming.py  test_streaming_fixtures.py
