[project]
name = "climux"
version = "0.1.0"
description = "A headless CLI process manager with JSON-RPC control."
license = { text = "All Rights Reserved" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
  {name = "Tony Narlock", email = "tony@git-pull.com"}
]
dependencies = []

[dependency-groups]
dev = [
  ### Testing ###
  "pytest",
  "pytest-asyncio",
  "pytest-rerunfailures",
  "pytest-timeout",
  "pytest-watcher",
  "pytest-xdist",
  "psutil",  # For process monitoring in tests
  "types-psutil",  # Type stubs for psutil
    # Lint
  "ruff",
  "mypy",
  "typing-extensions",
]

[tool.mypy]
strict = true
python_version = "3.12"
files = [
  "climux.py",
  "tests/",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Trycertatops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]

[tool.ruff.lint.isort]
known-first-party = [
  "src",
  "doctest_document",
  "docutils_compat",
  "gp_libs",
  "linkify_issues",
  "pytest_doctest_docutils",
]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--tb=short --no-header --showlocals --doctest-modules --strict-markers"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
testpaths = [
  "tests",
]
asyncio_mode = "auto"  # Auto-detect async tests
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "stress: marks tests as stress tests",
]
# Ensure test isolation
tmp_path_retention_policy = "failed"  # Keep tmp dirs only for failed tests
# Suppress benign warnings
filterwarnings = [
    # Python 3.13 forkpty warning - benign for our short-lived tests
    "ignore:.*multi-threaded.*forkpty.*:DeprecationWarning",
]

[tool.pytest-watcher]
now = true
ignore_patterns = ["*.py.*.py"]
